RESOLVED FIXED305554
[WPE] WPE Platform: scrolling with touchscreen is broken when building with legacy API disabled
https://bugs.webkit.org/show_bug.cgi?id=305554
Summary [WPE] WPE Platform: scrolling with touchscreen is broken when building with l...
Carlos Garcia Campos
Reported 2026-01-15 04:11:45 PST
.
Attachments
Carlos Garcia Campos
Comment 1 2026-01-15 04:16:10 PST
EWS
Comment 2 2026-01-15 05:11:51 PST
Committed 305637@main (734d46320bd4): <https://commits.webkit.org/305637@main> Reviewed commits have been landed. Closing PR #56632 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.