[WPE] WPE Platform: scrolling with touchscreen is broken when building with legacy API disabled https://bugs.webkit.org/show_bug.cgi?id=305554

Reviewed by Nikolas Zimmermann.

Override isNativeWebTouchEvent() in NativeWebTouchEvent for the new API
too and ensure hasPreciseScrollingDeltas is serialized in IPC message too.

* Source/WebKit/Shared/NativeWebTouchEvent.h:
* Source/WebKit/Shared/WebEvent.serialization.in:

Canonical link: https://commits.webkit.org/305637@main